--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.4",
     "react-redux": "^9.2.0",
     "styled-components": "^6.1.16"
   },
