Push Notifications  using Firebase

--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native": "0.78.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-onesignal": "^5.2.9",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.4",
     "react-redux": "^9.2.0",
+    "redux-mock-store": "^1.5.5",
     "styled-components": "^6.1.16"
   },
   "devDependencies": {
